--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "id": "66ee71e9",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "a891508d",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "id": "ed9e28ac",
    "metadata": {},
    "outputs": [
@@ -40,7 +40,7 @@
        "  'white': {'pawn': [0, 4], 'fences_left': 10}}}"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "id": "3816f0f8",
    "metadata": {},
    "outputs": [
@@ -91,19 +91,69 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "4225e023",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def shortest_path(board: GameBoard, player: Literal['white', 'black']) -> int:\n",
+    "    \"\"\"\n",
+    "    Calculate the shortest path distance for the given player on the game board.py\n",
+    "    Using A* algorithm for pathfinding.\n",
+    "\n",
+    "    Args:\n",
+    "        board (GameBoard): instance of GameBoard\n",
+    "        player (Literal[&#39;white&#39;, &#39;black&#39;]): the player for whom to calculate the path\n",
+    "\n",
+    "    Returns:\n",
+    "        int: the length of the shortest path from the player's starting position to the goal line\n",
+    "    \"\"\"\n",
+    "    player_pos = board.get_state()['player'][player]['pawn']\n",
+    "    opponent_pos = board.get_state()['player']['black' if player == 'white' else 'white']['pawn']\n",
+    "    \n",
+    "    def applicable_moves(position) -> List[Tuple[int, int]]:\n",
+    "        \"\"\"\n",
+    "        Get all applicable moves for the player from the current position.\n",
+    "        \"\"\"\n",
+    "        moves = []\n",
+    "        directions = [(0, 1), (1, 0), (0, -1), (-1, 0)]\n",
+    "        candidates = []\n",
+    "        for d in directions:\n",
+    "            new_pos = (position[0] + d[0], position[1] + d[1])\n",
+    "            if new_pos == opponent_pos:\n",
+    "                candidates.append(())\n",
+    "        for candidate in candidates:\n",
+    "            if not (0 <= candidate[0] < 9 and 0 <= candidate[1] < 9):\n",
+    "                continue\n",
+    "            if board.is_valid_move(player, candidate):\n",
+    "                moves.append(candidate)\n",
+    "        return moves\n",
+    "    \n",
+    "    goal_row = 8 if player == 'white' else 0\n",
+    "    \n",
+    "    return 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "63bebf66",
    "metadata": {},
    "outputs": [],
    "source": [
     "class Node:\n",
-    "    def __init__(self, board: GameBoard, player: Literal['white', 'black'], parent: GameBoard = None):\n",
+    "    def __init__(self, board: GameBoard, player: Literal['white', 'black'], parent: GameBoard = None, move = None, depth: int = 0):\n",
     "        self.board = board\n",
     "        self.player = player\n",
     "        self.opponent = 'black' if player == 'white' else 'white'\n",
     "        self.parent = parent\n",
-    "        self.children = []\n",
-    "        self.state = board.get_state()\n",
-    "\n",
+    "        self.move = move\n",
+    "        self.depth = depth\n",
+    "        \n",
+    "        self.alpha = -float('inf')\n",
+    "        self.beta = float('inf')\n",
+    "        self.value = None\n",
+    "        self.best_child = None\n",
+    "        \n",
     "        self.applicable_moves = [MOVE(self.player, m)\n",
     "                        for m in board.get_applicable_moves(self.player)]\n",
     "        self.applicable_blocks = [BLOCK(self.player, b)\n",
